# muq-website

./: .htaccess  github.php  index.php
admin/: .htaccess  index.php  objects.php  orm.php
css/: muq.css
includes/: analyticstracking.php  footer.php  header.php
json/: announcements.json  examples.json  people.json
pages/: .gitignore  SlackInvite.php  about.php  documentation.php  examples.php  home.php  sendSlackInvite.php
pages/examples/ExampleBasics/: CppIntro.php  Intro.php
pages/examples/Inference/MCMC/MCMC-Overview/: CMakeLists.txt  MCMC-Overview.cpp  MCMC-Overview.php
pages/examples/Inference/TransportMaps/BasicConstruction/: BasicConstruction.php  CMakeLists.txt
pages/examples/Inference/TransportMaps/SmallMultiscale/: CMakeLists.txt  SmallMultiscale.php
pages/examples/Modelling/: example-1-python.php
pages/examples/Optimization/Rosenbrock/: CMakeLists.txt  RosenbrockOpt.ipynb  RosenbrockOpt.php
